# my-ai-resume

./: README.md  app.ipynb  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
